--- a/translations/pl/weapons.phrases.tf.txt
+++ b/translations/pl/weapons.phrases.tf.txt
@@ -376,6 +376,10 @@
 	{
 		"pl"	"Ciastko Rybne"
 	}
+	"TF_COWMANGLER"
+	{
+		"pl"	"Wyżymaczka Krów 5000"
+	}
 	"TF_RIGHTEOUSBISON"
 	{
 		"pl"	"Prawy Bizon"
